--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,8 @@ jobs:
         run: |
           pwd
           ls
-          
+      - name: OC or kubectl
+        run: |
+          oc --version
+          kubectl --version
     
