--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,11 @@ jobs:
         run: |
           pwd
           ls
-      - name: OC or kubectl
-        run: |
-          oc version
+      - name: oc login
+        run: oc login --token=${{ secrets.OCP_TOKEN }} --server=https://api.devops24.cloud2.se:6443
+      - name: oc project
+        run: oc project test-miljo2
+      - name: oc get
+        run: oc get pods
       
     
